Prevent characters from sticking out of 'select' on the Paint screen.

--- a/potiboard2/theme/css/mono_deep.css
+++ b/potiboard2/theme/css/mono_deep.css
@@ -388,7 +388,7 @@ form.adminin {
 }
 
 .palette select.form {
-  width: 100%;
+  max-width: 100%;
 }
 
 .c {
